# flask-learning

./: .gitignore  app.py  pyproject.toml
flask_learning/: __init__.py  crud.py  db_setup.py  forms.py  main.py  models.py
flask_learning/hobby/: forms.py  views.py
flask_learning/hobby/templates/hobby/: add_hobby.html
flask_learning/migrations/versions/: 03b9dee95d60_add_new_table_human.py  7395ac0eb992_initial_migration.py  d82db4d9e8e8_add_column_city.py
flask_learning/person/: forms.py  views.py
flask_learning/person/templates/person/: add.html  delete.html  list.html
flask_learning/templates/: 404.html  add.html  base.html  delete.html  home.html  info.html  list.html  login.html  milk.html  register.html  signup.html  thankyou.html  welcome.html
migrations/versions/: 4eb5f07353f9_restructure_app.py  e90bd13efe28_add_user_authentication.py
