[tool.poetry]
name = "flask-learning"
version = "0.1.0"
description = ""
authors = ["Dilip Sharma <dilip.sharma@ishafoundation.org>"]
readme = "README.md"
packages = [{include = "flask_learning"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.3"
flask-wtf = "^1.1.1"
flask-sqlalchemy = "^3.0.3"
flask-migrate = "^4.0.4"
flask-bcrypt = "^1.0.1"
flask-login = "^0.6.2"
email-validator = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
